--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -566,4 +566,69 @@
   year    = {2018},
 }
 
+@Article{Indrasiri2019,
+  author  = {Kaun Indrasiri},
+  title   = {Essential microservices integration patterns},
+  journal = {https://www.infoworld.com/article/3343068/essential-microservices-integration-patterns.html},
+  year    = {2019},
+  date    = {2019-03-27},
+}
+
+@Article{Majerowicz2017,
+  author  = {Lucas Majerowicz},
+  title   = {Integration patterns for microservices architectures: the good, the bad and the ugly},
+  journal = {http://hecodes.com/2017/04/integration-patterns-microservices-architectures-good-bad-ugly/},
+  year    = {2017},
+  date    = {2017-04-25},
+}
+
+@Article{Spichale2018,
+  author  = {Kai Spichale},
+  title   = {Microservice integration patterns},
+  journal = {https://blogs.sap.com/2018/03/07/microservice-integration-patterns/},
+  year    = {2018},
+  date    = {2018-03-07},
+}
+
+@Article{Apcera2015,
+  author  = {Apcera},
+  title   = {Integration patterns formicroservices architectures},
+  journal = {https://www.slideshare.net/Apcera/integration-patterns-for-microservices-architectures},
+  year    = {2015},
+  date    = {2015-09-17},
+}
+
+@Article{Aradhye2018,
+  author  = {Yogi Aradhye},
+  title   = {How integration patterns impact your microservices architecture},
+  journal = {https://headspring.com/2018/11/14/integration-patterns-microservices-architecture/},
+  year    = {2018},
+  date    = {2018-11-14},
+}
+
+@Article{Arungupta2015,
+  author       = {Arungupta},
+  title        = {MIcroservice design patterns},
+  journal      = {http://blog.arungupta.me/microservice-design-patterns/},
+  journaltitle = {http://blog.arungupta.me/microservice-design-patterns/},
+  year         = {2015},
+  date         = {2015-04-10},
+}
+
+@Article{Smith2019,
+  author  = {Ben Smith},
+  title   = {Microservice integration patterns},
+  journal = {https://10consulting.com/2019/04/12/microservice-integration-patterns/},
+  year    = {2019},
+  date    = {2019-04-12},
+}
+
+@Article{Scott2018,
+  author  = {Patrick Lee Scott},
+  title   = {Learning these 5 microservice patterns will make you a better engineer},
+  journal = {https://hackernoon.com/learning-these-5-microservice-patterns-will-make-you-a-better-engineer-52fc779c470a},
+  year    = {2018},
+  date    = {2018-01-11},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
