--- a/bachproef/bachproef-tin.tex
+++ b/bachproef/bachproef-tin.tex
@@ -15,13 +15,13 @@
 % TODO: Vul dit aan met je eigen info:
 
 % De titel van het rapport/bachelorproef
-\title{Microservice integration patterns on SAP order-to-cash process.}
+\title{Microservice integration patterns op SAP order-to-cash proces.}
 
 % Je eigen naam
 \author{Lyva Van Damme}
 
 % De naam van je promotor (lector van de opleiding)
-\promotor{Karin Samyn}
+\promotor{Karine Samyn}
 
 % De naam van je co-promotor. Als je promotor ook je opdrachtgever is en je
 % dus ook inhoudelijk begeleidt (en enkel dan!), mag je dit leeg laten.
@@ -39,7 +39,7 @@
 %  - 1e semester = 1e examenperiode => 1
 %  - 2e semester = 2e examenperiode => 2
 %  - tweede zit  = 3e examenperiode => 3
-\examenperiode{2}
+\examenperiode{3}
 
 %===============================================================================
 % Inhoud document
