--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -17,15 +17,16 @@ De algemene onderzoeksvraag is: "Hoe microserivce integration patterns een order
   \item Hoe kan er overgeschakeld worden naar een microservice architectuur?
   \item Welke aanpassingen kunnen of moeten er gebeuren aan de architectuur om de microservices te laten werken?
   \item Hoe zal de communicatie tussen de verschillende microservices werken?
+  \item Welke integration patterns zijn er?
   \item Hoe zit een order-to-cash (OTC) proces er uit?
   \item Welke business requirements heeft een order-to-cash proces?
-  \item Welke invloed heeft de microservice architectuur op de performance van een order-to-cash proces?
+  \item Welke invloed heeft een microservice integration pattern op het order-to-cash proces?
 \end{itemize}
 Dit zal een theoretische studie zijn.
 
 \section{\IfLanguageName{dutch}{Onderzoeksdoelstelling}{Research objective}}
 \label{sec:onderzoeksdoelstelling}
-Het doel van deze paper is het onderzoeken van de effecten van een microservices architectuur op de architectuur van een OTC in SAP. De ambitie houdt in dat we aan de hand van een zes-stappen plan, theoretisch, gaan kijken hoe een OTC verandert door microservices.  
+Het doel van deze paper is het onderzoeken van de effecten van een microservices integration patterns op de architectuur van een OTC-proces in SAP. De ambitie houdt in dat er verschillende microservice integration patterns worden onderzocht. Bij de methodologie wordt er één integration pattern theoretisch benadert op het order-to-cash proces. Het integration pattern zal gekozen worden aan de hand van een vergelijking met verschillende patterns.
 
 \section{\IfLanguageName{dutch}{Opzet van deze bachelorproef}{Structure of this bachelor thesis}}
 \label{sec:opzet-bachelorproef}
@@ -36,10 +37,10 @@ Het doel van deze paper is het onderzoeken van de effecten van een microservices
 
 De rest van deze bachelorproef is als volgt opgebouwd:
 
-In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie. Hierin zal er meer uitleg gegeven worden over microservices en het order-to-cash proces binnen SAP.
+In Hoofdstuk~\ref{ch:stand-van-zaken} wordt een overzicht gegeven van de stand van zaken binnen het onderzoeksdomein, op basis van een literatuurstudie. Hierin zal er meer uitleg gegeven worden over microservices, verschillende integration patterns en het order-to-cash proces binnen SAP.
 
 In Hoofdstuk~\ref{ch:methodologie} wordt de methodologie toegelicht en worden de gebruikte onderzoekstechnieken besproken om een antwoord te kunnen formuleren op de onderzoeksvragen. Hier zal het onderzoek worden uitgevoerd over hoe microservices het order-to-cash proces zullen beïnvloeden.
 
 % TODO: Vul hier aan voor je eigen hoofstukken, één of twee zinnen per hoofdstuk
 
-In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt ook een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
+In Hoofdstuk~\ref{ch:conclusie}, tenslotte, wordt de conclusie gegeven en een antwoord geformuleerd op de onderzoeksvragen. Daarbij wordt een aanzet gegeven voor toekomstig onderzoek binnen dit domein.
