--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -40,14 +40,14 @@
 % CONTEXT
 
 % NOOD
-Dit onderwerp werd gegeven door delaware. Om te onderzoeken hoe microservices een invloed kan hebben op het order-to-cash proces binnen SAP. 
+Dit onderwerp werd voorgesteld door delaware. Om te onderzoeken hoe microservice integration patterns een invloed kunnen hebben op het order-to-cash proces binnen SAP. 
 
 % TAAK
 Dit onderzoek kent een verdiepende structuur. Waar in de start uitleg wordt gegeven omtrent microservices, kent het vervolg een vergelijking tussen verschillende onderdelen. Enkele voorbeelden hiervan zijn authenticatie en authorisatie. Deze scriptie sluit af met opkomende ideologieën en de bescherming van microservices.
 
 % OBJECT
-In deze thesis is als eerste een uitgebreide literatuurstudie terug te vinden. In deze literatuurstudie wordt er dieper ingegaan op de technologie microservice. Daarnaast zal er meer uitleg gegeven worden over het order-to-cash proces.
-Na de literatuurstudie wordt het microservice pattern toegepast op het order-to-cash proces. Als afsluiter komt de conclusie.
+In deze thesis is als eerste een uitgebreide literatuurstudie terug te vinden. In deze literatuurstudie wordt er dieper ingegaan op de technologie van microservice en de verschillende integration patterns omtrent de microservices. Daarnaast zal er meer uitleg gegeven worden over het order-to-cash proces.
+Na de literatuurstudie wordt het microservice integration pattern toegepast op het order-to-cash proces. Als afsluiter komt de conclusie.
 
 % RESULTAAT
 Microservices zorgen voor een geautomatiseerd proces met weinig interactie met een werknemer. Het is een complexe architectuur. De overschakeling bevat veel onderdelen waar er in eerste instantie niet aan gedacht wordt. Het werd ook duidelijk dat er goed moet worden nagedacht over alle kleine dingen, zoals authenticatie, de manier van bescherming, hoe logging wordt opgevangen. 
