Toevoegen integration patterns
Anti-pattern
- Break the piggy bank
- Everything micro
- We are agile: Frankenstein
Communicatie tussen microservices

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -694,4 +694,18 @@
   date    = {2019-03-18},
 }
 
+@Article{Richardson2019,
+  author  = {Chris Richardson},
+  title   = {Microservices adoption anti-patterns: microservices are a magic pixie dust},
+  journal = {http://chrisrichardson.net/post/antipatterns/2019/01/07/microservices-are-a-magic-pixie-dust.html},
+  year    = {2019},
+}
+
+@Article{Solance2018,
+  author  = {Solance},
+  title   = {Communication Between Microservices: Why You Need Messaging},
+  journal = {https://solace.com/blog/messaging-between-microservices/},
+  year    = {2018},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
