fouten recht gezet

--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -196,12 +196,12 @@
 }
 
 @Article{Wikipedia2019,
-  author       = {Wikipedia},
-  title        = {Order to cash},
-  journal      = {https://en.wikipedia.org/wiki/Order_to_cash},
-  journaltitle = {https://en.wikipedia.org/wiki/Order_to_cash},
-  year         = {2019},
-  date         = {2019},
+  author  = {Wikipedia},
+  title   = {Order to cash},
+  journal = {https://en.wikipedia.org/wiki/Order_to_cash},
+  year    = {2019},
+  date    = {2019},
+  url     = {https://en.wikipedia.org/wiki/Order_to_cash},
 }
 
 @Article{Gehrke2018,
@@ -718,8 +718,9 @@
 @Article{Loshin2019,
   author  = {David Loshin},
   title   = {What is ETL?},
-  journal = {https://www.sas.com/en_us/insights/data-management/what-is-etl.html},
+  journal = {SAS},
   year    = {2019},
+  url     = {https://www.sas.com/en_us/insights/data-management/what-is-etl.html},
 }
 
 @Article{Guru2019,
