--- a/bachproef/bachproef-tin.bib
+++ b/bachproef/bachproef-tin.bib
@@ -758,4 +758,60 @@
   year    = {2019},
 }
 
+@Article{Roy2018,
+  author  = {Chandan Roy},
+  title   = {RESTful API design : Microservices},
+  journal = {https://medium.com/@cknextmove/restful-api-design-microservices-f983e3ea3563},
+  year    = {2018},
+}
+
+@Article{Mulesoft2019a,
+  author  = {Mulesoft},
+  title   = {What is a REST API?},
+  journal = {https://www.mulesoft.com/resources/api/what-is-rest-api-design},
+  year    = {2019},
+}
+
+@Article{Deering2012,
+  author  = {Sam Deering},
+  title   = {Do you know what a REST API is?},
+  journal = {https://www.sitepoint.com/developers-rest-api/},
+  year    = {2012},
+}
+
+@Article{Rouse2019,
+  author  = {Margaret Rouse},
+  title   = {REST (REpresentational State Transfer)},
+  journal = {https://searchmicroservices.techtarget.com/definition/REST-representational-state-transfer},
+  year    = {2019},
+}
+
+@Article{Avraham2017,
+  author  = {Shif Ben Avraham},
+  title   = {What is REST — A Simple Explanation for Beginners, Part 1: Introduction},
+  journal = {https://medium.com/extend/what-is-rest-a-simple-explanation-for-beginners-part-1-introduction-b4a072f8740f},
+  year    = {2017},
+}
+
+@Article{Restlet2019,
+  author  = {Restlet},
+  title   = {Microservices How to Build Microservices with REST APIs?},
+  journal = {https://restlet.com/use-cases/api-first/microservices/},
+  year    = {2019},
+}
+
+@Article{Smith2016,
+  author  = {Jason Smith},
+  title   = {An argument against REST in microservices},
+  journal = {https://blog.container-solutions.com/argument-rest-microservices},
+  year    = {2016},
+}
+
+@Article{stSoftware2019,
+  author  = {stSoftware},
+  title   = {How to define a RESTful Web Services?},
+  journal = {https://www.stsoftware.com.au/site/ST/blog/article/rest-define/},
+  year    = {2019},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
