--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -533,6 +533,41 @@ Hierna blijft enkel de hoognodige data over. Die data wordt ingelanden in een da
 \end{figure}
 
 \subsection{REST}
+REST, of te wel 'REpresentational State Transfer', is een soort architectuur om web services te ontwikkelen. In volgende opsomming bevat verschillende definities omtrent REST:
+\begin{itemize}
+	\item 'REST is an architectal style, or design pattern, for API's', \textcite{Avraham2017}.
+	\item 'REST API defines a set of functions which developers can perform requests via HTTP protocol', \textcite{Deering2012}.
+	\item 'REST is architectural style for developing web services', \textcite{Rouse2019}.
+	\item 'REST essentially refers to a style of web architecture that has many underlying characteristics and governs the behavoir of clients and servers', \textcite{Deering2012}.
+\end{itemize}
+
+Anders verwoordt: REST wordt geimplementeerd op al bestaande systemen om informatie op te halen. 
+Enkele termen:
+\begin{itemize}
+	\item Client: Een persoon, software of web browser dat een API gebruikt.
+	\item Resource: Het is een object dat de API informatie kan voor verlenen.
+\end{itemize}
+
+Enkele voordelen van REST:
+\begin{itemize}
+	\item REST is niet gebonden aan een programmeertaal.
+	\item REST kan gebruikt worden in met elk protocol.
+	\item REST laat toe om de requirements van beide kanten te implementeren. 
+\end{itemize}
+
+Enkele nadelen van REST:
+\begin{itemize}
+	\item REST wordt gelimiteerd door de tekortkomingen van HTTP.
+	\item De informatie kan verloren gaan in de request-response cycle.
+	\item Er kunnen geen notificaties gestuurd worden van de server naar de client.
+	\item Iets dat REST-based is, komt meestal vaag over.
+\end{itemize} 
+
+\begin{figure}[h!]
+	\includegraphics[width=10cm]{rest.jpg}
+	\centering
+	\caption{Hoe REST eruit ziet. \textcite{stSoftware2019tS}}
+\end{figure}
 \section{Order-to-cash proces in SAP}
 \subsection{Definite}
 \textcite{Wong2018} legt uit wat een order-to-cash proces inhoudt. Dit proces heeft veel invloed op het succes van een bedrijf. Dit proces heeft veel invloed met de klant. Een voordeel met de huidige technologie is dat het mogelijk is om het proces volledig te automatiseren. Dit zorgt voor een minimaal aantal fouten en vertragingen. De data en gegevens die worden opgehaald en geanalyseerd is correcter. 
